@@ -45,11 +45,11 @@ public class ReplaceWithLootTableFunction extends LootItemConditionalFunction {
         table.getRandomItemsRaw(lootContext, loot::add);
         if (loot.size() > 1) {
             Artifacts.LOGGER.warn("Loot table {} in roll_loot_table function generated more than 1 item", lootTable.toString());
-        } else if (loot.size() == 0) {
+        } else if (loot.isEmpty()) {
             Artifacts.LOGGER.warn("Failed to generate any loot from loot table {}", lootTable.toString());
             return ItemStack.EMPTY;
         }
-        return loot.get(0);
+        return loot.getFirst();
     }
 
     public static LootItemConditionalFunction.Builder<?> replaceWithLootTable(ResourceKey<LootTable> lootTable) {
